--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostrar Ubicación con OpenStreetMap</title>
+    <title>Validación de Ubicación y QR Temporal</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mostrar Ubicación del Dispositivo</h1>
-    <button onclick="getLocation()">Mostrar Ubicación</button>
+    <h1>Validación de Ubicación y Generación de QR</h1>
+    <form id="emailForm">
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Validar Ubicación</button>
+    </form>
+    <p id="message"></p>
     <div id="map"></div>
+    <div id="qrCode"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode"></script>
     <script src="script.js"></script>
 </body>
 </html>
