--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Validación de Ubicación y QR Temporal</title>
+    <title>Validación de Ubicación y QR</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Validación de Ubicación y Generación de QR</h1>
-    <form id="emailForm">
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+    <form id="idForm">
+        <label for="cedula">Número de Cédula:</label>
+        <input type="text" id="cedula" name="cedula" required>
         <button type="submit">Validar Ubicación</button>
     </form>
     <p id="message"></p>
@@ -23,3 +23,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
