--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Validación de Ubicación y QR</title>
+    <title>Validación de Ubicación y QR Temporal</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Validación de Ubicación y Generación de QR</h1>
     <form id="idForm">
-        <label for="cedula">Número de Cédula:</label>
-        <input type="text" id="cedula" name="cedula" required>
+        <label for="idNumber">Número de Cédula:</label>
+        <input type="text" id="idNumber" name="idNumber" required pattern="\d{6,10}" title="Por favor ingrese un número de cédula válido.">
         <button type="submit">Validar Ubicación</button>
     </form>
     <p id="message"></p>
@@ -23,4 +23,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
