--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <body>
     <h1>Validación de Ubicación y Generación de QR</h1>
     <form id="idForm">
-        <label for="idNumber">Número de Cédula:)</label>
+        <label for="idNumber">Número de Cédula:(</label>
         <input type="text" id="idNumber" name="idNumber" required pattern="\d{6,10}" title="Por favor ingrese un número de cédula válido.">
         <button type="submit">Validar Ubicación</button>
     </form>
