--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <p id="message"></p>
     <div id="map"></div>
     <div id="linkContainer">
-        <a id="youtubeLink" href="https://sebastianvega22.github.io/qr/" target="_blank">Ir al enlace de YouTube</a>
+        <a id="youtubeLink" href="https://www.aulasuniminuto.edu.co" target="_blank">Ir al enlace de YouTube</a>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
