--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validación de Ubicación y Enlace de YouTube</title>
+    <title>Validación de Ubicación y Enlace</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         body {
@@ -136,7 +136,7 @@
     </style>
 </head>
 <body>
-    <h1>Validación de Ubicación y Enlace de YouTube</h1>
+    <h1>Validación de Ubicación y Enlace</h1>
     <form id="idForm">
         <label for="idNumber">Número de Cédula:</label>
         <input type="text" id="idNumber" name="idNumber" required pattern="\d{6,10}" title="Por favor ingrese un número de cédula válido.">
@@ -145,7 +145,7 @@
     <p id="message"></p>
     <div id="map"></div>
     <div id="linkContainer">
-        <a id="youtubeLink" href="https://www.aulasuniminuto.edu.co" target="_blank">Ir al enlace de YouTube</a>
+        <a id="youtubeLink" href="https://www.aulasuniminuto.edu.co" target="_blank">Ir al enlace</a>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
