--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
     <div id="linkContainer">
         <a id="youtubeLink" href="https://www.aulasuniminuto.edu.co" target="_blank">Ir al enlace</a>
     </div>
+    <div id="loading" style="display:none;">
+    <div class="spinner"></div>
+    </div>
+
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="script.js"></script>
