--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             <div class="wallet-section">
                 <h3>Ya tengo wallet</h3>
                 <button id="validateWallet">Validar wallet</button>
-                <p id="walletValidationMessage"></p>
             </div>
+        </div>
+
+        <!-- Contenedor para la dirección de la wallet -->
+        <div id="walletMessageContainer">
+            <p id="walletValidationMessage">Esta es su dirección de wallet:</p>
         </div>
     </div>
 
@@ -43,12 +47,6 @@
     <div id="linkContainer">
         <a id="youtubeLink" href="https://www.aulasuniminuto.edu.co" target="_blank">Ir al enlace</a>
     </div>
-
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="script.js"></script>
-</body>
-</html>
-
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="script.js"></script>
